# sforecast

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  README_DEV_NOTES.md  READM_scipy_lablas_mac.md  pyproject.toml
data/: M5_7items_week.csv  OECD_CCI_DOWNLOAD_DP_LIVE_2507_20220725.csv  Superstore_subcatsales_2017_cdp.csv  m5_sales_7_items_events_cci_wide.csv
docs/: LSTM Forecast.ipynb  M5_Sales_N_Items.ipynb  Makefile  conf.py  example.ipynb  forecast_EDA_Superstore.ipynb  make.bat
notebooks/: M5_Sales_N_Items.ipynb  classical_models.ipynb  data_transforms.py  forecast_EDA_Superstore.ipynb  forecast_online_sales.ipynb  mlprep.py  skllearn_models.ipynb  tensorflow_models.ipynb
src/sforecast/: __init__.py  sforecast.py
tests/: classical.ipynb  covarlags.ipynb  sklearn.ipynb  tensorflow.ipynb  test_classical.py  test_methods.py  test_sforecast.py  test_sklearn.py  test_tensorflow.py
