[tool.poetry]
name = "sforecast"
version = "0.1.0"
description = "A package to support supervised learning forecast methods (ML and DL) within a sliding forecast framework (sliding window or expanding window)"
authors = ["Alberto Gutierrez"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
